<resources>
    <string name="app_name">smartdoor</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_login">Login</string>

    <string name="prompt_name">이름</string>

    <string name="prompt_id">ID</string>

    <string name="prompt_passwordConfirm">Password 확인</string>

    <string name="prompt_phone">"전화번호"</string>

    <string name="prompt_dupli">"중복확인"</string>

    <string name="prompt_regist">"회원가입"</string>

    <string name="prompt_dupliText">"사용가능한 아이디입니다."</string>

    <string name="register">"회원가입"</string>

    <string name="id_password_find">ID/비밀번호 찾기</string>

    <string name="id_find">ID 찾기</string>

    <string name="password_find">비밀번호 찾기</string>

    <string name="find">찾기</string>

    <string name="picture">사진 찍기</string>

    <string name="picture_regist">사진 저장</string>

    <string name="open">개방</string>

    <string name="close">폐쇄</string>


</resources>